@@ -1,3 +1,12 @@
+2008-04-29  Joel Brobecker  <brobecker@adacore.com>
+
+	* gdbarch.sh: Document the return_value method. Explain that
+	the FUNCTYPE parameter might be NULL.
+	* gdbarch.h: Regenerated.
+	* sparc-tdep.c (sparc32_push_dummy_code): Do not pass the function
+	type when calling using_struct_return, as this is unnecessary
+	on this target.
+
 2008-04-28  Joel Brobecker  <brobecker@adacore.com>
 
 	* terminal.h (create_tty_session): Fix return type.
